docs: Criada doc para get_token
